# ffmpegDemo

./: README.md
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/dy/ffmpeg/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: AudioDevice.c  FFmpegAudioPlay.c  decode_video.cpp  play_audio.cpp  play_video.cpp
app/src/main/cpp/include/: AudioDevice.h  FFmpegAudioPlay.h  jonesx_audioplayer_AudioPlayer.h  log.h  play_audio.h
app/src/main/java/com/dy/ffmpeg/: BaseActivity.java  DecodeActivity.java  MainActivity.java  PlayMusicActivity.java
app/src/main/res/layout/: activity_main.xml  activity_music.xml  activity_play_music.xml  content_music.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/dy/ffmpeg/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
